--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,12 @@
 .nav-wrapper {
     padding: 0 2rem;
 }
+
+.delete-answer {
+    position: absolute;
+    top: 10px;
+    right: 0;
+    color: #e74c3c;
+    cursor: pointer;
+    z-index: 10;
+}
