--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,18 @@
 @import "~materialize-css/dist/css/materialize.min.css";
 
+.content {
+    margin: 0 auto;
+    max-width: 1280px;
+    width: 90%;
+}
+
+@media only screen and (min-width: 993px) {
+    .container {
+        width: 70%;
+    }
+}
+
+
 .nav-wrapper {
     padding: 0 2rem;
 }
