--- a/client/src/components/UI/Checkbox/Checkbox.css
+++ b/client/src/components/UI/Checkbox/Checkbox.css
@@ -22,6 +22,7 @@
     height: 18px;
     border: 1px solid #ddd;
     padding: 2px;
+    box-sizing: border-box;
 }
 
 .Checkbox-i_radio:before {
@@ -32,6 +33,7 @@
     padding: 2px;
     transition: background 0.2s ease;
     background: transparent;
+    box-sizing: border-box;
 }
 
 .Checkbox-input:checked + .Checkbox-label .Checkbox-i_radio:before {
