--- a/client/src/components/VoteCard/VoteCard.css
+++ b/client/src/components/VoteCard/VoteCard.css
@@ -1,6 +1,8 @@
 .VoteCard {
     border: 1px solid #ddd;
     border-radius: 5px;
+    margin-bottom: 4rem;
+    background: #fff;
 }
 
 .VoteCard-header {
@@ -8,9 +10,8 @@
 }
 
 .VoteCard-title {
-    margin: 0;
+    margin: 0 0 1rem 0;
     font-size: 1.8rem;
-    margin-bottom: 1rem;
 }
 
 .VoteCard-content {
@@ -21,6 +22,7 @@
     padding: 0 20px 24px;
 }
 
-.Pooling-item {
-    margin-bottom: 1rem;
+.VoteCard-buttons {
+    display: flex;
+    align-items: center;
 }
