--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,19 @@
-@import "~materialize-css/dist/css/materialize.min.css";
+@import "~normalize.css";
+
+html {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", 'Roboto', Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    background: #f7f7f7;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+h1, h2, h3, h4, h5 {
+    font-weight: 400;
+}
 
 .content {
     margin: 0 auto;
