--- a/client/src/components/UI/Button/Button.css
+++ b/client/src/components/UI/Button/Button.css
@@ -1,6 +1,6 @@
 .Button {
     padding: 0.5rem 1.5rem;
-    border-radius: 5px;
+    border-radius: 2px;
     cursor: pointer;
     color: #2980b9;
     border: 1px solid #2980b9;
@@ -33,8 +33,8 @@
     color: #fff;
 }
 
-.Button:not(:last-of-type) {
-    margin-right: 1rem;
+.Button + * {
+    margin-left: 1rem;
 }
 
 .Button_type_active {
